lab3/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-service
spec:
  selector:
    app: bookstore
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8181
  type: ClusterIP
